--- a/style.css
+++ b/style.css
@@ -202,7 +202,24 @@ html{
     margin-bottom: 20px;
 }
 
+.alignleft {
+    display: inline;
+    float: left;
+    margin-right: 1.5em;
+}
 
+.alignright {
+    display: inline;
+    float: right;
+    margin-left: 1.5em;
+}
+
+.aligncenter {
+    clear: both;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 
