--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ html{
 }
 code, pre {
     border-radius: 3px;
-    background-color:#f7f7f7;
+    background-color:black;
     color: inherit;
 }
 
@@ -235,7 +235,7 @@ pre {
     line-height: 1.7em;
     overflow: auto;
     padding: 6px 10px;
-    border-left: 5px solid #6CE26C;
+    border-left: 5px solid gray;
 }
 
 pre > code {
@@ -253,7 +253,7 @@ pre > code {
 }
 
 code {
-    color: #666555;
+    color: white;
 }
 
 
