--- a/style.css
+++ b/style.css
@@ -255,7 +255,13 @@ pre > code {
 code {
     color: white;
 }
-
+.single_content_tags{margin-bottom:10px;margin-top: 10px;margin-right:10px;font-size: 0px;padding: 10px;background: white;box-shadow:0 1px 1px 0 #d9d9d9;}
+.single_content_tags span{font-size: 14px;}
+.single_content_tags a{background-color:#aaa;border-radius:0 2px 2px 0;color:#fff;display:inline-block;font-size:11px;line-height:13px;margin:0 0px 2px 10px;padding:4px 7px 3px;position:relative;text-transform:uppercase;}
+.single_content_tags a:before{border-top:10px solid transparent;border-right:8px solid #aaa;border-bottom:10px solid transparent;content:"";height:0;position:absolute;top:0;left:-8px;width:0;-webkit-transition:all .01s linear;-moz-transition:all .01s linear;-ms-transition:all .01s linear;-o-transition:all .01s linear;transition:all .01s linear;}
+.single_content_tags a:after{background-color:#fff;border-radius:50%;content:"";height:4px;position:absolute;top:8px;left:-2px;width:4px}
+.single_content_tags a:hover{background:#444;color:#FFF; text-decoration:none;}
+.single_content_tags a:hover:before{border-right-color:#444}
 
 
 
